--- a/client/nav.html
+++ b/client/nav.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/whiteboard">Whiteboard</a>
+        <a class="navbar-brand" href="/">Whiteboard</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
