add name to whiteboards list in progress

--- a/client/list-group.html
+++ b/client/list-group.html
@@ -3,7 +3,11 @@
     <a href="/whiteboard/" class="list-group-item active text-center">+</a>
     {{#each whiteboards}}
     <a href="/whiteboard/{{_id}}" class="list-group-item">
-      Brak nazwy <small>{{_id}}</small>
+      {{#if name}}
+        {{name}}
+      {{else}}
+        Brak nazwy <small>{{_id}}</small>
+      {{/if}}
     </a>
     {{/each}}
   </div>
